Added home image

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: "NodeJS with less faff"
+title: "NodeJS with less mess"
 ---
 <section class="jumbotron jumbotron--home-page">
 
@@ -12,7 +12,7 @@ title: "NodeJS with less faff"
 
         <h1 class="text-center">
           <strong class="text-primary">
-            NodeJS. With less faff
+            NodeJS. With less mess
           </strong>
         </h1>
 
@@ -20,17 +20,18 @@ title: "NodeJS with less faff"
           <h2 class="text-center nav-border">
             Get rid of the boilerplate and build highly testable NodeJS applications fast
           </h2>
-
         </div>
 
-      </div>
+        <div class="col-sm-4 col-sm-offset-4 col-xs-12">
+          <a
+            class="btn btn-success btn-block btn-lg"
+            href="{{ '/getting-started' | preprend:site.baseurl }}">
+            Quick Start
+          </a>
+        </div>
 
-      <div class="col-sm-4 col-sm-offset-4 col-xs-12">
-        <a
-          class="btn btn-success btn-block btn-lg"
-          href="{{ '/getting-started' | preprend:site.baseurl }}">
-          Quick Start
-        </a>
+        <div class="clearfix"></div>
+
       </div>
 
     </div>
