--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: "NodeJS with less mess"
+title: "NodeJS. With less mess"
 ---
 <section class="jumbotron jumbotron--home-page">
 
