Added an arrow to the quick start

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ title: "NodeJS. With less mess"
             class="btn btn-success btn-block btn-lg"
             href="{{ '/getting-started' | preprend:site.baseurl }}">
             Quick Start
+            <i class="fa fa-arrow-right fa-lg"></i>
           </a>
         </div>
 
