--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: "NodeJS. With less mess"
 
         <div class="col-sm-4 col-sm-offset-4 col-xs-12">
           <a
-            class="btn btn-success btn-block btn-lg"
+            class="btn btn-info btn-block btn-lg"
             href="{{ '/getting-started' | preprend:site.baseurl }}">
             Quick Start
             <i class="fa fa-arrow-right fa-lg"></i>
